added in login and gradient effects

--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,8 @@
         
         <div class="top-header">
             <div class="scrumster"><strong>SCRUMSTER</strong></div>
-            <!-- <div class="logo"><img src="/images/logo.png" height="90"></div>   -->     
+            <!-- <div class="logo"><img src="/images/logo.png" height="90"></div>   -->
+            <div class="button login">Sign In</div>     
         </div>
         <div class="main-body">
             <div class="steps-box">
