Added in responsive elements

--- a/app/index.html
+++ b/app/index.html
@@ -26,9 +26,9 @@
         </div>
         <div class="main-body">
             <div class="steps-box">
-                <div class="step ideas">Rough Ideas</div>
-                <div class="step to-do">Tasks To Do</div>
-                <div class="step progress">In Progress</div>
+                <div class="step ideas">New Ideas</div>
+                <div class="step to-do">Approved for Development</div>
+                <div class="step progress">Currently in Progress</div>
             </div>
 
             <div class="first container">
@@ -318,7 +318,7 @@
 
 
             <div class="final-title">
-                <div class="step last">Completed Work</div>
+                <div class="step last">Completed Tasks</div>
             </div>
 
             <div class="fourth container">
