Added in a second collection

--- a/app/index.html
+++ b/app/index.html
@@ -51,10 +51,10 @@
             </div>
             </script>
 
-            <script type="text/template" class="">
-            <div class="construction bundle2"><h4>Subject Title:</h4>
+            <script type="text/template" class="approve-template">
+            <div class="construction bundle2"><h4>Subject Title: <%=title %></h4>
                 <div class="collection B">
-                    <div class="caption"></div>
+                    <div class="caption"><%=caption %></div>
                     <div class="button-box">
                         <div class="button garbage"><img src="/images/garbage.png" height="20"></div>
                         <div class="button share"><img src="/images/share.png" height="20"></div>
